whole site overhaul

--- a/css/styles.css
+++ b/css/styles.css
@@ -156,15 +156,14 @@ header, main, section, footer {
     justify-content: space-between; }
 
 .main {
-  padding-top: 7vh;
-  min-height: 100vh; }
+  padding-top: 7vh; }
 
 .hero {
   color: white;
   background-color: #333333;
   position: relative;
   text-align: center;
-  min-height: 96vh; }
+  min-height: 93vh; }
   .hero:before {
     content: "";
     background-color: rgba(0, 0, 0, 0.35);
@@ -440,7 +439,7 @@ h6 {
   top: 0;
   left: 0;
   right: 0;
-  font-size: 1.5em;
+  font-size: 1.25em;
   opacity: 1; }
   .port-caption p {
     color: #eee;
