--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -466,6 +466,7 @@ h6 {font-size: 1.500rem; line-height: 1.375;}
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
+        align-items: center;
      p {
     margin: 0 auto;
 }
