--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,7 +1,6 @@
 @charset "utf-8";
 /* CSS Document */
 
-@import url("normalize.css");
 @import url('https://fonts.googleapis.com/css?family=Anton|Open+Sans');
 
 
@@ -86,6 +85,9 @@ header, main, section, footer {
   display: block;
   position: relative;
   width: 100%;
+}
+.backpage {
+    margin-top: 5vh;
 }
 .skip-to-main {
   padding: 1rem;
@@ -353,8 +355,8 @@ header {
 
 
 //Typography
-h1 {font-size: 3rem; line-height: 1.777;}
-h2 {font-size: 2.625em; line-height: 1.7;}
+h1 {font-size: 3rem; line-height: 1.177;}
+h2 {font-size: 2.625em; line-height: 1.3;}
 h3 {font-size: 2.250rem; line-height: 1.333;}
 h4 {font-size: 2rem; line-height: 1.344;}
 h5 {font-size: 1.750em; line-height: 1.357;}
@@ -454,15 +456,18 @@ h6 {font-size: 1.500rem; line-height: 1.375;}
   opacity:1;
 
   p {
+  	font-family:$anton;
   	color:#eee;
-  	margin: 1vh;
+  	margin: 10vh;
+font-size: 2em;
   }
 }
 #talk .container {
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     justify-content: space-between;
         align-items: center;
+
      p {
     margin: 0 auto;
 }
@@ -471,7 +476,8 @@ h6 {font-size: 1.500rem; line-height: 1.375;}
 
 /* TAB screens */
 @media all and (min-width: 650px) {
-
+h1 {line-height: 1.777;}
+h2 {line-height:1.7}
 .header {
   height: auto;
 }
@@ -488,7 +494,8 @@ padding-bottom: 3rem;
 	opacity:0;
 	transition: all .7s ease-out, opacity .7s ease;
   p {
-  	margin: 1em;
+  	margin: 1vh;
+	font-size: 1em;
   }
   
 }
@@ -496,6 +503,10 @@ padding-bottom: 3rem;
   opacity:1;
   transition: all .7s ease-out, opacity .7s ease;
 }
+#talk .container {
+    flex-flow: row nowrap;
+    text-align:inherit;
+    }
 
 } 
    
